tests/spec/fail/logic_non_bool_operand.aja
if "x" and True:
    print("x")
